--- a/setup.cfg
+++ b/setup.cfg
@@ -33,31 +33,31 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     torch>=1.12
-    bitsandbytes==0.41.1
+    bitsandbytes>=0.41.1
     accelerate>=0.27.2
-    huggingface-hub>=0.11.1,<1.0.0
+    huggingface-hub>=0.11.1
     tokenizers>=0.13.3
-    transformers==4.43.1  # if you change this, please also change version assert in petals/__init__.py
-    speedtest-cli==2.1.3
+    transformers>=4.43.1  # if you change this, please also change version assert in petals/__init__.py
+    speedtest-cli>=2.1.3
     hivemind @ git+https://github.com/learning-at-home/hivemind.git@213bff98a62accb91f254e2afdccbf1d69ebdea9
-    tensor_parallel==1.0.23
+    tensor_parallel>=1.0.23
     humanfriendly
     async-timeout>=4.0.2
     cpufeature>=0.2.0; platform_machine == "x86_64"
     packaging>=20.9
     sentencepiece>=0.1.99
-    peft==0.8.2
+    peft>=0.8.2
     safetensors>=0.3.1
     Dijkstar>=2.6.0
-    numpy<2
+    numpy>2
 
 [options.extras_require]
 dev =
-    pytest==6.2.5
+    pytest>=6.2.5
     pytest-forked
-    pytest-asyncio==0.16.0
-    black==22.3.0
-    isort==5.10.1
+    pytest-asyncio>=0.16.0
+    black>=22.3.0
+    isort>=5.10.1
     psutil
 
 [options.packages.find]
