Update .gitmodules and track health.petals.dev as a regular directory for our fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "health.petals.dev"]
 	path = health.petals.dev
-	url = https://github.com/petals-infra/health.petals.dev.git
+	url = https://github.com/Petalsaka/health.petals.dev.git
